I just added my name to this file

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
   <meta charset="utf-8">
 
-  <title>Sample Page Demo with Git!</title>
+  <title>Sample Page Demo with Git! NEVIN</title>
   <meta name="description" content="Sample Page">
   <meta name="author" content="SitePoint">
 
