--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-	<h1>Hello, world</h1>
+	<h1>Hello, Nevin</h1>
 	<p>Hi there</p>
   <script src="js/scripts.js"></script>
 </body>
